rnsc/test_data/integration/error/parser/class_body/dot_class_end_trailing_tokens.rns
.class public EmptyClass
.super java/lang/Object

.class_end   trailing tokens   ; <- err